2006-01-23  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/c.m4 (AC_LANG_FUNC_LINK_TRY(C)): Prefer "defined
	FOO" to "defined (FOO)".
	* lib/autoconf/functions.m4 (_AC_LIBOBJ_ALLOCA): Likewise.
	* lib/autoconf/headers.m4 (AC_HEADER_STAT): Likewise.
	* lib/autoconf/specific.m4 (AC_XENIX_DIR): Likewise.
	* tests/tools.at (ifnames): Likewise.

2006-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/m4sugar/m4sh.m4 (AS_TMPDIR): Do not pass `-q' to mktemp.
	* lib/Autom4te/General.pm (mktmpdir): Likewise.
	(END): Improve error message a bit.
	Reported by Bruce Korb <bkorb@gnu.org>.

2006-01-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/fortran.m4 (_AC_FC_LIBRARY_LDFLAGS): Ignore
	`-LIST:' and `-LNO:', for PathScale 2.3 compilers.

2006-01-11  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Header Portability): On Solaris 8, sys/ptem.h
	requires sys/stream.h.  Reported by Oliver Kiddle.

2006-01-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	    Stepan Kasal  <kasal@ucw.cz>

	* lib/autotest/general.m4 (AT_INIT): When ensuring writability
	before the removals of test dirs, use `find' to avoid modification
	of symlinked directories.

2006-01-11  Steven G. Johnson  <stevenj@alum.mit.edu>

	* lib/autoconf/fortran.m4 (AC_F77_DUMMY_MAIN, AC_FC_DUMMY_MAIN):
	Don't ignore the macro arguments.

2006-01-11  David Thompson  <dthompsn@vizsolutions.com>

	* lib/autoconf/c.m4 (_AC_PROG_CXX_EXIT_DECLARATION): Add `exit'
	declaration that works for MSVC.

2006-01-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/lang.m4 (_AC_COMPILER_OBJEXT_REJECT):
	Add `*.map' and `.inf' for Green Hills compiler.
	Reported by Stefan Seefeld <stefan@codesourcery.com>.

	* lib/m4sugar/m4sugar.m4 (m4_text_wrap): Handle quadrigraphs
	correctly: pad with spaces after FIRST_PREFIX if necessary,
	and compute string lenghts with `m4_qlen' instead of `m4_len'.
	* lib/m4sugar/m4sh.m4 (AS_HELP_STRING): Comments updated.
	* tests/m4sh.at (AS_HELP_STRING): Test extended.